src/test/deca/context/valid/tests/NEW.deca
class Test {
}

{
    Test t = new Test();
}
