src/test/deca/context/invalid/tests/FIELD-wrong_type.deca
class Test {
    int method = 0;
}

{
    Test t = new Test();
    Test a = t.method;
}
